--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lusitana:wght@400;700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-  
-  
 
 </head>
 <body>
-  <div class="img-container">
-    <img class="qrcode" src="images\image-qr-code.png">
-
-    <div class="content">
-      <h1 class="outfit-h1">Improve your front-end skills by building projects</h1>
-      <p class="outfit-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <main>
+    <div class="img-container">
+      <img class="qrcode" src="images/image-qr-code.png" alt="QR scan">
+      <div class="content">
+        <h1 class="outfit-h1">Improve your front-end skills by building projects</h1>
+        <p class="outfit-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
-    
-  </div>
-  
+  </main>
 </body>
 </html>
